[package]
name = "group-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# panic = 'abort'

# [dev-dependencies]
# sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print" ] }

[workspace]
members = [".", "entity", "migration"]

[dependencies]
futures = "0.3.21"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[dependencies.sea-orm]
version = "^0"
features = [
  "runtime-async-std-native-tls",
  "sqlx-mysql",
  # "macros",
]

