[package]
name = "group-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# panic = 'abort'

# [dev-dependencies]
# sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print" ] }

[workspace]
members = [".", "entity", "migration"]

[dependencies]
futures = "0.3.21"
entity = { path = "entity" }
migration = { path = "migration" }
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
serde = { version = "^1", features = ["derive"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc", "rocket_db_pools"] }
lettre = {version= "0.10", features= ["sendmail-transport"]} # smtp 메일러
rand = "0.8.5" # 랜덤

[dependencies.sea-orm]
version = "^0"
features = [
  "runtime-async-std-native-tls",
  "sqlx-mysql",
  # "macros",
]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"
features = ["rocket_okapi"] #enables rocket_okapi so to have open api features enabled

