[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
serde = { version = "^1", features = ["derive"] }
sea_orm_expand = { path = "../lib/sea_orm_expand" }
sea_orm_expand_derive = { path = "../lib/sea_orm_expand_derive" }

[dependencies.sea-orm]
version = "^0"
features = [
  "with-time",
]
