[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "^0"
features = [
  "runtime-async-std-native-tls",
  "sqlx-mysql",
  # "macros",
]
